# transcepta-anyinvoice-v2

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.md  a_ingestion.py  ba_gpt_4o_assistant_file_search.py  bb_gpt_4o_vision_chat.py  bc_gpt_4o_pymupdf_text.py  justfile  models.py  pyproject.toml  ruff.toml
