[tool.poetry]
name = "anyinvoice-v2-analysis"
version = "0.1.0"
description = ""
authors = ["Alex Wendland <me@alexwendland.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^1.0.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
openai = "^1.35.9"
pymupdf = "^1.24.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
